--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "bob-the-bone-cowboy",
-  "version": "9.0.0",
-  "private": true,
+  "name": "ai-ghost",
+  "version": "1.0.0",
+  "description": "Bob the Bone Cowboy (AI Ghost) project using Three.js + Vite",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "three": "^0.155.0"
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "vite": "^5.0.0"
