--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "ai-ghost",
   "version": "1.0.0",
-  "description": "Bob the Bone Cowboy (AI Ghost) project using Three.js + Vite",
+  "description": "Bob the Bone Cowboy — AI Ghost Project using Vite and Three.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "three": "^0.169.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "gh-pages": "^6.0.0"
   }
 }
